--- a/4.Redis数据库.md
+++ b/4.Redis数据库.md
@@ -1,18 +1,26 @@
 # Redis数据库
 
-​	**Redis是一个开源的、存储Key-Value键值对的、非关系型数据库。**
+### Redis简介
 
-​	**Redis里面的数据是存储在内存里的，因此写速度都非常快，但对内存要求比较高。**
+**Redis是一个基于内存的、开源的、单线程的、存储Key-Value键值对的、非关系型数据库。**
 
-​	**Redis服务运行的端口默认为：6379。**
+**注意：Redis中的Key-Value键值对，并非字典中一个键对应一个值，它可以一个键对应多个值。**
 
-​	redis既可以做缓存，也可以做持久存储。
+**Redis默认支持16个数据库（修改配置信息可以支持更多，无上限），每个数据库都以编号命名（0-15），客户端与Redis建立连接会自动选择0号数据库**
 
-​	目前大多数公司的存储都是MySQL + Redis，其中：**MySQL作为主存储，Redis作为辅助存储被用作缓存，加快访问读取的速度，提高性能。**
+**Redis每个数据库的数据是不能共享，但并不是完全隔离的，比如FLUSHALL命令可以清空Redis中所有数据库中的数据**
 
-​	因为Redis对内存要求比较高，而且存储容量肯定要比磁盘少很多，那么要存储大量数据，只能花更多的钱去购买内存，造成在一些不需要高性能的地方是相对比较浪费的，因此在有限的条件下不能把所有数据都放在Redis，MySQL偏向于存数据，Redis偏向于快速取数据，最好把热门的数据放Redis，基本数据放MySQL。
+**Redis服务运行的端口默认为：6379**
 
-### Linux系统
+##### 优势
+
+**因为Redis里面的数据是存储在内存里的，因此读写速度都非常快，所以常用redis做缓存，当然也可以做持久存储**
+
+目前大多数公司的存储都是MySQL + Redis：**其中MySQL作为主存储，Redis作为辅助存储被用作缓存，加快访问读取的速度，提高性能。**因为Redis对内存要求比较高，而且存储容量肯定要比磁盘少很多，要存储大量数据，只能花更多的钱去购买内存，在一些不需要高性能的地方造成浪费，因此不能把所有数据都放在Redis，MySQL偏向于存数据，Redis偏向于快速取数据，最好把热门数据放Redis，基本数据放MySQL。
+
+### Redis服务
+
+**Linux系统**
 
 ##### 安装
 
@@ -64,7 +72,7 @@ service redis stop
 /bin/systemctl stop  redis.service
 ```
 
-##### Redis测试
+##### 通信测试
 
  PING命令：通常用于测试与服务器的连接是否仍然生效，或者用于测量延迟值。
 
@@ -75,7 +83,7 @@ redis 127.0.0.1:6379> ping
 PONG
 ```
 
-### Windows系统
+**Windows系统**
 
 进入安装Redis的文件夹，F:\Program Files (x86)\Redis
 
@@ -86,31 +94,25 @@ PONG
 再运行客户端程序，点击redis-cli.exe文件，即可运行Redis数据库。
 ```
 
-### 修改配置
+##### 设置登录密码
 
-##### 文件位置
+Redis也不支持为每个数据库设置不同的访问密码，所以一个客户端要么可以访问全部数据库，要么连一个数据库也没有权限访问。
 
-配置文件位置：redis 配置信息在 /etc/redis.conf中
-
-##### 修改登录密码
-
-在vim中通过搜索:/requirepass 可以找到如下配置
+redis 配置信息在 redis.windows.conf中，通过搜索:requirepass 可以找到如下配置：
 
 ```
 requirepass foobared
 ```
 
-​	如果取消该注释，修改foobared的值新的密码值，并保存文件，则说明redis重启以后需要输入新设置的密码newfoobared登录
+如果取消该注释，修改foobared的值新的密码值，并保存文件，redis重启以后需要输入新设置的密码newfoobared登录
 
 ```
 requirepass newfoobared
 ```
 
-  然后重启
-
 ##### 进入退出
 
-直接使用redis-cli命令进入，使用auth 加密码进行验证，如果auth密码验证失败的话提示 (error) NOAUTH Authentication required. 错误
+直接使用redis-cli命令进入，使用auth 加密码进行验证，如果auth密码验证失败提示 (error) NOAUTH Authentication required.错误
 
 quit： 关闭连接
 
@@ -125,7 +127,9 @@ quit： 关闭连接
 ##### 基本命令
 
 ```
-KEYS * 				 # 获得当前数据库的所有键
+SELECT 1             # 选择1号数据库
+
+KEYS * 		     # 获得当前数据库的所有键
 
 EXISTS key [key ...] # 判断键是否存在，返回个数，如果key有一样的也是叠加数
 
@@ -319,7 +323,7 @@ count<0，从右边开始删除前|count|个值为value的元素
 语法：SMEMBERS key ，返回集合全部元素
 
 值是否存在：SISMEMBER        
-语法：SISMEMBER key member ，如果存在返回1，不存在返回0
+语法：SISMEMBER key member ，如果存在返回True，不存在返回False
 
 随机获取元素：SRANDMEMGER 
 语法：SRANDMEMBER key [count]，根据count不同有不同结果：
