--- a/5.Python操作数据库.md
+++ b/5.Python操作数据库.md
@@ -270,6 +270,8 @@ coll.drop()
 
 # 操作Redis
 
+### 连接配置
+
 ##### 安装Redis 
 
 ```
@@ -278,7 +280,11 @@ pip install Redis
 
 ##### 安装redis-py
 
-​	redis-py 库提供两个类 Redis 和 StrictRedis 来实现 Redis 的命令操作，StrictRedis 实现了绝大部分官方的命令，参数 一一对应。而Redis是StrictRedis 的子类，它的主要功能是用于向后兼容旧版本库里的几个方法。
+redis-py 库提供两个类 Redis 和 StrictRedis 来实现 Redis 的命令操作。
+
+StrictRedis 实现了绝大部分官方的命令，参数一一对应(官方推荐)。
+
+Redis是StrictRedis 的子类，它的主要功能是用于向后兼容旧版本库里的几个方法。
 
 ```
 pip install redis-py
@@ -286,20 +292,39 @@ pip install redis-py
 
 ##### 连接Redis	
 
-​	现在我们已经在本地安装了 Redis 并运行在 6379 端口，密码设置为 foobared。那么，可以用如下示例连接 Redis 并测试：
+现在我们已经在本地安装了 Redis 并运行在 6379 端口，密码默认为None。那么，可以用如下示例连接 Redis 并测试：
 
 ```
-# 导入StrictRedis
-from redis import StrictRedis
+# 导入redis
+import redis
 
-# 声明 StrictRedis 对象，传入地址、端口、数据库、密码信息。
-# 在默认情况下，这4个参数分别为 localhost、6379、0和None。
-redis = StrictRedis(host='localhost', port=6379, db=0, password='foobared')
+# 声明 StrictRedis 对象，默认传入地址localhost、端口6379、选择0号数据库、密码为None。
+con = redis.StrictRedis(host='localhost', port=6379, db='0', password='None')
+```
 
+### 操作数据库
+
+##### 键值对string
+```
 # set()方法，设置一个键值对
-redis.set('name', 'Bob') 
+con.set('name', 'Bob') 
 
 # 获取键值并打印
-print(redis.get('name')) 	# b'Bob'
+print(con.get('name')) 	# b'Bob'
 ```
 
+##### 集合set
+
+```
+# 集合save_url中加入123456
+con.sadd('save_url','123456')
+
+# 判断集合save_url是否存在123456
+print(con.sismember('save_url','123456'))    # True
+
+# 集合save_url中删除123456
+con.srem('save_url','123456')
+
+# 判断集合save_url是否存在123456
+print(con.sismember('save_url','123456'))    # False
+```
