--- a/5.Python操作数据库.md
+++ b/5.Python操作数据库.md
@@ -298,7 +298,7 @@ pip install redis-py
 # 导入redis
 import redis
 
-# 声明 StrictRedis 对象，默认传入地址localhost、端口6379、选择0号数据库、密码为None。
+# 声明 StrictRedis 对象，默认传入地址localhost、端口6379、选择0号数据库（不写默认0号）、密码为None。
 con = redis.StrictRedis(host='localhost', port=6379, db='0', password='None')
 ```
 
