--- a/5.Python操作数据库.md
+++ b/5.Python操作数据库.md
@@ -110,7 +110,7 @@ except:
 
 ```
 # sql查询语句
-sql = f'SELECT cookie FROM {cp.get(section,"table1")} WHERE account={account}'
+sql = f'SELECT cookie FROM 表名 WHERE 条件语句'
 # 执行sql
 cursor.execute(sql)
 # 将执行结果保存在res
