--- a/5.Python操作数据库.md
+++ b/5.Python操作数据库.md
@@ -129,6 +129,16 @@ db.close()
 
 **注意：不要写在循环中，若频繁的关闭数据库，可能会导致数据库崩溃。**
 
+##### 可能错误
+
+在大量的执行插入语句操作时，MySQL可能会死锁，解决办办法运行下面命令：
+
+```
+SELECT * FROM INFORMATION_SCHEMA.INNODB_TRX;
+
+kill杀死进程id（trx_mysql_thread_id列）
+```
+
 # 操作MongoDB
 
 ### 连接配置
