--- a/4.Redis数据库.md
+++ b/4.Redis数据库.md
@@ -1,4 +1,8 @@
+- Redis支持数据的持久化，可以将内存中的数据保存在磁盘中，重启的时候可以再次加载进行使用。
+- Redis支持数据的备份，即master-slave模式的数据备份。
+- Redis供提了丰富的API以操作这些数据结构。
 
+Redis不仅仅支持简单的key-value类型的数据，同时还提供string，list，set，zset，hash等数据结构的存储，当然
 
 ##### 启动查看
 
